; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_compressor.c_vm_compressor_age_swapped_in_segments.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_compressor.c_vm_compressor_age_swapped_in_segments.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32 }

@c_swappedin_list_head = common dso_local global i32 0, align 4
@FALSE = common dso_local global i64 0, align 8
@C_SEGMENT_SWAPPEDIN_AGE_LIMIT = common dso_local global i64 0, align 8
@C_ON_AGE_Q = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @vm_compressor_age_swapped_in_segments to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vm_compressor_age_swapped_in_segments(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %6 = call i32 @clock_get_system_nanotime(i64* %4, i32* %5)
  br label %7

7:                                                ; preds = %26, %1
  %8 = call i32 @queue_empty(i32* @c_swappedin_list_head)
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  br i1 %10, label %11, label %37

11:                                               ; preds = %7
  %12 = call i64 @queue_first(i32* @c_swappedin_list_head)
  %13 = inttoptr i64 %12 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %13, %struct.TYPE_3__** %3, align 8
  %14 = load i64, i64* %2, align 8
  %15 = load i64, i64* @FALSE, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %26

17:                                               ; preds = %11
  %18 = load i64, i64* %4, align 8
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = sub nsw i64 %18, %21
  %23 = load i64, i64* @C_SEGMENT_SWAPPEDIN_AGE_LIMIT, align 8
  %24 = icmp slt i64 %22, %23
  br i1 %24, label %25, label %26

25:                                               ; preds = %17
  br label %37

26:                                               ; preds = %17, %11
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 1
  %29 = call i32 @lck_mtx_lock_spin_always(i32* %28)
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %31 = load i32, i32* @C_ON_AGE_Q, align 4
  %32 = load i64, i64* @FALSE, align 8
  %33 = call i32 @c_seg_switch_state(%struct.TYPE_3__* %30, i32 %31, i64 %32)
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 1
  %36 = call i32 @lck_mtx_unlock_always(i32* %35)
  br label %7

37:                                               ; preds = %25, %7
  ret void
}

declare dso_local i32 @clock_get_system_nanotime(i64*, i32*) #1

declare dso_local i32 @queue_empty(i32*) #1

declare dso_local i64 @queue_first(i32*) #1

declare dso_local i32 @lck_mtx_lock_spin_always(i32*) #1

declare dso_local i32 @c_seg_switch_state(%struct.TYPE_3__*, i32, i64) #1

declare dso_local i32 @lck_mtx_unlock_always(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
